@@ -1,7 +1,7 @@
 /********************************************************************\
  * ui-callbacks.h                                                   *
  * Copyright (C) 1997 Robin D. Clark                                *
- * Copyright (C) 1999 Rob Browning <rlb@cs.utexas.edu>              *
+ * Copyright (C) 1999, 2000 Rob Browning <rlb@cs.utexas.edu>        *
  *                                                                  *
  * This program is free software; you can redistribute it and/or    *
  * modify it under the terms of the GNU General Public License as   *
@@ -28,6 +28,7 @@
 
 #include <gnc-common.h>
 
+/* Dialog windows ***************************************************/
 typedef enum
 {
   GNC_VERIFY_NO,
@@ -35,9 +36,6 @@ typedef enum
   GNC_VERIFY_CANCEL,
   GNC_VERIFY_OK
 } GNCVerifyResult;
-
-
-void gnc_refresh_main_window( void );
 
 GNCVerifyResult
 gnc_verify_cancel_dialog_parented(gncUIWidget parent,
@@ -55,9 +53,22 @@ gncBoolean gnc_verify_dialog( const char *message,
 			      gncBoolean yes_is_default );
 void       gnc_error_dialog( const char *message );
 
+
+/* Managing the GUI Windows *****************************************/
+void gnc_refresh_main_window( void );
+void gnc_ui_destroy_all_subwindows( void );
+
+
+/* Changing the GUI Cursor ******************************************/
 void gnc_set_busy_cursor( gncUIWidget w );
 void gnc_unset_busy_cursor( gncUIWidget w );
 
-void gnc_ui_destroy_all_subwindows( void );
+
+/* QIF Import Windows ***********************************************/
+typedef struct _qifimportwindow QIFImportWindow;
+
+QIFImportWindow * gnc_ui_qif_import_dialog_make();
+void gnc_ui_qif_import_dialog_destroy(QIFImportWindow * window);
+
 
 #endif
